@@ -39,6 +39,7 @@ public abstract class Event {
   public final static int SET_RECIPE_ID = 26;
   public final static int CONFIRM_FREEZING = 28;
   public final static int FOCUS_AMOUNT_FIELD = 30;
+  public final static int UPDATE_BOTTOM_APP_BAR = 32;
 
   abstract public int getType();
 
