@@ -40,7 +40,6 @@
     android:layout_gravity="bottom"
     app:paddingBottomSystemWindowInsets="false"
     app:elevation="0dp"
-    app:navigationIcon="@drawable/ic_round_menu_anim"
     app:menu="@menu/menu_empty" />
 
   <com.google.android.material.floatingactionbutton.FloatingActionButton
