@@ -2,6 +2,7 @@
 
 - New: Many pages of the app now can be opened using NFC tags with URI (thanks @codesalatdev) (#676)
 - Improved: In-app help now contains a list of the supported URIs that can be used for Intents
+- Improved: Menu button in bottom app bar now can be hidden in behavior settings
 - Improved: Scrollbar is shown in scrollable lists
 - Improved: Better logic on login page for receiving Home Assistant session token (#670)
 - Improved: Logging on login page for Home Assistant connection (#670)
